--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     flex-wrap: wrap;
     margin: auto;
     margin-top: 200px;
+    position: relative;
 }
 
 .markerSpace {
@@ -58,25 +59,25 @@ body {
 
 #overlay {
     position: absolute;
-    height: 630px;
-    width: 630px;
-    top: 33.5%;
-    left: 37.34%;
+    height: 100vh;
+    width: 105vw;
+    left: 0;
+    top: 22.25%;
     background-color: rgba(0,0,0,.5);
-    border-radius: 2rem;
+
 }
 
 #popUpBox {
-    position: absolute; 
-    left: 38%;
-    top: 55%;
+    margin: auto;
     height: 120px;
     width: 600px;
-    background-color: lightslategray;
+    background-color: aliceblue;
     z-index: 1;
     display: flex;
     flex-direction: column;
     border-radius: 2rem;
+    position: absolute;
+    left: 35%
 
 }
 
